# project/project/blog-list/app/Http/Controllers/AuthController.php
@@ -16,7 +16,7 @@ class AuthController extends Controller
     public function __construct()
     {
 //        $this->middleware(['jwt.auth'], ['except' => ['login','captcha.jpg']]);
-//        $this->middleware(['auth:api'], ['except' => ['login']]);
+//        $this->middleware(['auth=>api'], ['except' => ['login']]);
     }
 
     /**
@@ -28,11 +28,11 @@ class AuthController extends Controller
     {
 
 
-//        $validator = \Validator::make($request->all(), [
+//        $validator = \Validator=>=>make($request->all(), [
 //            'email' => 'required|email',
 //            'password' => 'required',
 //            'ckey' => 'required',
-//            'captcha' => 'required|captcha_api:' . $request->input('ckey')
+//            'captcha' => 'required|captcha_api=>' . $request->input('ckey')
 //        ],[
 //            'captcha.required' => '验证码不能为空',
 //            'captcha.captcha_api' => '请输入正确的验证码',
@@ -103,6 +103,134 @@ class AuthController extends Controller
             'token_type' => 'bearer',
             'expires_in' => auth()->factory()->getTTL() * 60
         ]);
+    }
+
+
+    public function info()
+    {
+
+        $result = [
+            "routerList" => [
+                [
+                    "path" => '/admin/dashborad',
+                    "component" => 'layout/index',
+                    "redirect" => 'noRedirect',
+                    "name" => 'dashborad',
+                    "meta" => [
+                        "title" => 'dashborad',
+                        "icon" => 'dashboard',
+                        "type" => "menu",
+                        "hidden" => false,
+                        "model" => 'dashborad'
+                    ],
+                    "children" => [[
+                        "path" => 'index',
+                        "component" => 'moudles/dashborad/views/index',
+                        "name" => 'dashboradIndex',
+                        "meta" => ["title" => 'dashborad', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'dashborad']
+                    ]]
+                ],
+                [
+                    "path" => '/admin/ui',
+                    "component" => 'layout/index',
+                    "redirect" => 'noRedirect',
+                    "name" => 'ui',
+                    "meta" => [
+                        "title" => 'ui',
+                        "icon" => 'dashboard',
+                        "type" => "menu", "hidden" => false,
+                        "model" => 'ui'
+                    ],
+                    "children" => [[
+                        "path" => 'form',
+                        "component" => 'moudles/ui/views/form',
+                        "name" => 'form',
+                        "meta" => ["title" => 'form', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'ui']
+                    ],
+                        [
+                            "path" => 'table',
+                            "component" => 'moudles/ui/views/table',
+                            "name" => 'table',
+                            "meta" => ["title" => 'table', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'ui']
+                        ],
+                        [
+                            "path" => 'file',
+                            "component" => 'moudles/ui/views/file',
+                            "name" => 'file',
+                            "meta" => ["title" => 'file', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'ui']
+                        ],
+                        [
+                            "path" => 'imgCropper',
+                            "component" => 'moudles/ui/views/imgCropper',
+                            "name" => 'imgCropper',
+                            "meta" => ["title" => 'imgCropper', "icon" => 'dashboard', "type" => "menu", "hidden" => true, "model" => 'ui']
+                        ]
+                    ]
+                ],
+                [
+                    "path" => '/admin',
+                    "component" => 'layout/index',
+                    "redirect" => 'noRedirect',
+                    "name" => 'user',
+                    "meta" => [
+                        "title" => 'user',
+                        "icon" => 'dashboard',
+                        "type" => "menu", "hidden" => false,
+                        "model" => 'user'
+                    ],
+                    "children" => [[
+                        "path" => 'user',
+                        "component" => 'moudles/user/views/list',
+                        "name" => 'userList',
+                        "meta" => ["title" => 'userList', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'user']
+                    ], [
+                        "path" => 'user/store',
+                        "component" => 'moudles/user/views/form',
+                        "name" => 'userStore',
+                        "meta" => ["title" => 'userStore', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'user']
+                    ], [
+                        "path" => 'user/update/:id',
+                        "component" => 'moudles/user/views/form',
+                        "name" => 'userUpdate',
+                        "meta" => ["title" => 'userUpdate', "icon" => 'dashboard', "type" => "menu", "hidden" => true, "model" => 'user']
+                    ]]
+                ],
+                [
+                    "path" => '/admin/systemManager',
+                    "component" => 'layout/index',
+                    "name" => 'systemManager',
+                    "meta" => [
+                        "title" => 'systemManager',
+                        "icon" => 'dashboard',
+                        "type" => "menu", "hidden" => false,
+                        "model" => 'systemManager'
+                    ],
+                    "children" => [[
+                        "path" => 'router',
+                        "component" => 'moudles/systemManager/views/router',
+                        "name" => 'routerList',
+                        "meta" => ["title" => 'routerList', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'systemManager']
+                    ], [
+                        "path" => 'role',
+                        "component" => 'moudles/systemManager/views/role',
+                        "name" => 'roleList',
+                        "meta" => ["title" => 'roleList', "icon" => 'dashboard', "type" => "menu", "hidden" => false, "model" => 'systemManager']
+                    ],[
+                        "path" => 'role/store',
+                        "component" => 'moudles/systemManager/views/role.form',
+                        "name" => 'storeRole',
+                        "meta" => ["title" => 'storeRole', "icon" => 'dashboard', "type" => "menu", "hidden" => true, "model" => 'systemManager']
+                    ],[
+                        "path" => 'role/update/:id',
+                        "component" => 'moudles/systemManager/views/role.form',
+                        "name" => 'updateRole',
+                        "meta" => ["title" => 'updateRole', "icon" => 'dashboard', "type" => "menu", "hidden" => true, "model" => 'systemManager']
+                    ]]
+                ],
+            ],
+        ];
+
+        return $result;
     }
 
 
